Imported from https://huang-jin-intel@github.com/huang-jin-intel/slimbootloader.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = Visit http://slimbootloader.github.io for documentation
+[access "refs/*"]
+	owner = group user/Huang Jin (huang-jin-intel)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Huang Jin (huang-jin-intel)
+	label-Verified = -1..+1 group user/Huang Jin (huang-jin-intel)
+	push = group user/Huang Jin (huang-jin-intel)
+	read = group user/Huang Jin (huang-jin-intel)
+	rebase = group user/Huang Jin (huang-jin-intel)
+	removeReviewer = group user/Huang Jin (huang-jin-intel)
+	submit = group user/Huang Jin (huang-jin-intel)
+[access "refs/heads/*"]
+	create = group user/Huang Jin (huang-jin-intel)
+	push = +force group user/Huang Jin (huang-jin-intel)
+	pushMerge = group user/Huang Jin (huang-jin-intel)
+	read = group user/Huang Jin (huang-jin-intel)
+[access "refs/tags/*"]
+	push = group user/Huang Jin (huang-jin-intel)
+	push = +force group user/Huang Jin (huang-jin-intel)
